--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Animals -- Anecdotes'
 - !lcc 'QL'
+- GITenberg
 title: The Way of the Wild
 url: http://www.gutenberg.org/ebooks/17567
